Make Gravitino build and run against JDK8, 11, 17